--- a/views/index.jade
+++ b/views/index.jade
@@ -8,6 +8,8 @@ block content
     li
         a(href="/about") about
     li
+        a(href="/blog") blog
+    li
         a(href="/users") users
     li
         a(href="/userlist") userlist
