--- a/views/blog.jade
+++ b/views/blog.jade
@@ -3,3 +3,14 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
+
+  form( method="post")
+    div
+        div
+            span Title :
+            input(type="text", name="title", id="editArticleTitle")
+        div
+            span Body :
+            textarea( name="body", rows=10, id="editArticleBody")
+        div#editArticleSubmit
+            input(type="submit", value="Send")
